Add transfer, approve and transferFrom tasks

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "erc20Address": "0xf230b790e05390fc8295f4d3f60332c93bed42e2",
   "erc20Decimal": 6,
   "infuraEndpoint": "https://mainnet.infura.io/",
-  "blockConfirmations": 4
+  "blockConfirmations": 4,
+  "defaultGasLimit": 50000
 }
