Update common code

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "erc20Decimal": 6,
   "infuraEndpoint": "https://mainnet.infura.io/",
   "blockConfirmations": 4,
-  "defaultGasLimit": 100000
+  "defaultGasLimit": 100000,
+  "defaultDecimals": 18
 }
