--- a/config.json
+++ b/config.json
@@ -1,7 +1,5 @@
 {
-  "erc20Address": "0xf230b790e05390fc8295f4d3f60332c93bed42e2",
-  "erc20Decimal": 6,
-  "infuraEndpoint": "https://mainnet.infura.io/",
+  "infuraEndpoint": "https://ropsten.infura.io/",
   "blockConfirmations": 4,
   "defaultGasLimit": 100000,
   "defaultDecimals": 18
